force-app/main/default/objects/MemberBookkeeping__x/MemberBookkeeping__x.object-meta.xml
<CustomObject>
    <description>MemberBookkeepings</description>
    <externalDataSource>CollectiveBackEnd</externalDataSource>
    <externalName>MemberBookkeepings</externalName>
    <label>MemberBookkeeping</label>
    <pluralLabel>MemberBookkeepings</pluralLabel>
</CustomObject>