force-app/main/default/objects/MemberBookkeeping__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>sfaccountid</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MemberBookkeepings</relationshipLabel>
    <relationshipName>MemberBookkeepings</relationshipName>
    <type>Lookup</type>
</CustomField>