force-app/main/default/objects/MemberBookkeeping__x/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>sfopportunityid</externalDeveloperName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MemberBookkeepings</relationshipLabel>
    <relationshipName>MemberBookkeepings</relationshipName>
    <type>Lookup</type>
</CustomField>