force-app/main/default/objects/MemberBookkeeping__x/fields/provider__c.field-meta.xml
<CustomField>
    <fullName>provider__c</fullName>
    <description>provider</description>
    <externalDeveloperName>provider</externalDeveloperName>
    <label>provider</label>
    <length>16</length>
    <type>Text</type>
</CustomField>