force-app/main/default/objects/MemberBookkeeping__x/fields/sfopportunityid__c.field-meta.xml
<CustomField>
    <fullName>sfopportunityid__c</fullName>
    <description>sfopportunityid</description>
    <externalDeveloperName>sfopportunityid</externalDeveloperName>
    <label>sfopportunityid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>